--- a/config/config.ini
+++ b/config/config.ini
@@ -24,5 +24,11 @@ team        = 2
 admin       = 3
 dev         = 4
 
+[logs]
+create      = 1
+update      = 2
+delete      = 3
+info        = 4
+
 [debug]
 active      = true
