--- a/config/config.ini
+++ b/config/config.ini
@@ -7,14 +7,14 @@ dbname       = crm
 charset      = utf8
 
 [mail]
-host         = smtp.mandrillapp.com
-username     = desenvolvimento@dzoe.com.br
-password     = FEvkpLDIZH27X38Q_dChcg
+host         = smtp.agenciadzoe.com.br
+username     = smtp@agenciadzoe.com.br
+password     = 1567@ert
 security     = tls
 port         = 587
 charset      = UTF-8
-email        = recepcao@metacon.eng.br
-name         = Metacon Engenharia
+email        = site@agenciadzoe.com.br
+name         = Agência dZoë
 
 [permissions]
 active      = true
