--- a/config/config.ini
+++ b/config/config.ini
@@ -2,7 +2,7 @@
 adapter      = Mysql
 host         = 127.0.0.1
 username     = root
-password     =
+password     = 
 dbname       = crm
 charset      = utf8
 
@@ -14,7 +14,7 @@ security     = tls
 port         = 587
 charset      = UTF-8
 email        = site@agenciadzoe.com.br
-name         = Agência dZoë
+name         = Rhino Project Manager
 
 [permissions]
 active      = true
